qutes_antlr/qutesParser.py
# Generated from /workspaces/qutes_lang/qutes.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class qutesParser ( Parser ):

    grammarFileName = "qutes.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'+'", "'-'", "'=='", "'>'", 
                     "'>='", "'<'", "'<='", "'='", "';'", "'if'", "'else'", 
                     "'while'", "'do'", "'{'", "'}'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "ADD", "SUB", 
                      "EQUAL", "GREATER", "GREATEREQUAL", "LOWER", "LOWEREQUAL", 
                      "ASSIGN", "END_OF_STATEMENT", "IF_STATEMENT", "ELSE_STATEMENT", 
                      "WHILE_STATEMENT", "DO_STATEMENT", "BLOCK_STATEMENT_START", 
                      "BLOCK_STATEMENT_END", "STRING_ENCLOSURE", "END_OF_PROGRAM", 
                      "INT", "STRING", "WS", "NEWLINE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_paren_expr = 2
    RULE_expr = 3
    RULE_test = 4
    RULE_term = 5
    RULE_variableName = 6
    RULE_string = 7
    RULE_integer = 8

    ruleNames =  [ "program", "statement", "paren_expr", "expr", "test", 
                   "term", "variableName", "string", "integer" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    ADD=3
    SUB=4
    EQUAL=5
    GREATER=6
    GREATEREQUAL=7
    LOWER=8
    LOWEREQUAL=9
    ASSIGN=10
    END_OF_STATEMENT=11
    IF_STATEMENT=12
    ELSE_STATEMENT=13
    WHILE_STATEMENT=14
    DO_STATEMENT=15
    BLOCK_STATEMENT_START=16
    BLOCK_STATEMENT_END=17
    STRING_ENCLOSURE=18
    END_OF_PROGRAM=19
    INT=20
    STRING=21
    WS=22
    NEWLINE=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qutesParser.StatementContext)
            else:
                return self.getTypedRuleContext(qutesParser.StatementContext,i)


        def getRuleIndex(self):
            return qutesParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = qutesParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.statement()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3528706) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return qutesParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF_STATEMENT(self):
            return self.getToken(qutesParser.IF_STATEMENT, 0)
        def paren_expr(self):
            return self.getTypedRuleContext(qutesParser.Paren_exprContext,0)

        def statement(self):
            return self.getTypedRuleContext(qutesParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variableName(self):
            return self.getTypedRuleContext(qutesParser.VariableNameContext,0)

        def ASSIGN(self):
            return self.getToken(qutesParser.ASSIGN, 0)
        def END_OF_STATEMENT(self):
            return self.getToken(qutesParser.END_OF_STATEMENT, 0)
        def expr(self):
            return self.getTypedRuleContext(qutesParser.ExprContext,0)

        def paren_expr(self):
            return self.getTypedRuleContext(qutesParser.Paren_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(qutesParser.ExprContext,0)

        def END_OF_STATEMENT(self):
            return self.getToken(qutesParser.END_OF_STATEMENT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfElseStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF_STATEMENT(self):
            return self.getToken(qutesParser.IF_STATEMENT, 0)
        def paren_expr(self):
            return self.getTypedRuleContext(qutesParser.Paren_exprContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qutesParser.StatementContext)
            else:
                return self.getTypedRuleContext(qutesParser.StatementContext,i)

        def ELSE_STATEMENT(self):
            return self.getToken(qutesParser.ELSE_STATEMENT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseStatement" ):
                listener.enterIfElseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseStatement" ):
                listener.exitIfElseStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseStatement" ):
                return visitor.visitIfElseStatement(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def END_OF_STATEMENT(self):
            return self.getToken(qutesParser.END_OF_STATEMENT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyStatement" ):
                listener.enterEmptyStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyStatement" ):
                listener.exitEmptyStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyStatement" ):
                return visitor.visitEmptyStatement(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BLOCK_STATEMENT_START(self):
            return self.getToken(qutesParser.BLOCK_STATEMENT_START, 0)
        def BLOCK_STATEMENT_END(self):
            return self.getToken(qutesParser.BLOCK_STATEMENT_END, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qutesParser.StatementContext)
            else:
                return self.getTypedRuleContext(qutesParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE_STATEMENT(self):
            return self.getToken(qutesParser.WHILE_STATEMENT, 0)
        def paren_expr(self):
            return self.getTypedRuleContext(qutesParser.Paren_exprContext,0)

        def statement(self):
            return self.getTypedRuleContext(qutesParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a qutesParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DO_STATEMENT(self):
            return self.getToken(qutesParser.DO_STATEMENT, 0)
        def statement(self):
            return self.getTypedRuleContext(qutesParser.StatementContext,0)

        def WHILE_STATEMENT(self):
            return self.getToken(qutesParser.WHILE_STATEMENT, 0)
        def paren_expr(self):
            return self.getTypedRuleContext(qutesParser.Paren_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStatement" ):
                listener.enterDoWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStatement" ):
                listener.exitDoWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStatement" ):
                return visitor.visitDoWhileStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = qutesParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = qutesParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.match(qutesParser.IF_STATEMENT)
                self.state = 24
                self.paren_expr()
                self.state = 25
                self.statement()
                pass

            elif la_ == 2:
                localctx = qutesParser.IfElseStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(qutesParser.IF_STATEMENT)
                self.state = 28
                self.paren_expr()
                self.state = 29
                self.statement()
                self.state = 30
                self.match(qutesParser.ELSE_STATEMENT)
                self.state = 31
                self.statement()
                pass

            elif la_ == 3:
                localctx = qutesParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.match(qutesParser.WHILE_STATEMENT)
                self.state = 34
                self.paren_expr()
                self.state = 35
                self.statement()
                pass

            elif la_ == 4:
                localctx = qutesParser.DoWhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.match(qutesParser.DO_STATEMENT)
                self.state = 38
                self.statement()
                self.state = 39
                self.match(qutesParser.WHILE_STATEMENT)
                self.state = 40
                self.paren_expr()
                pass

            elif la_ == 5:
                localctx = qutesParser.BlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.match(qutesParser.BLOCK_STATEMENT_START)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3528706) != 0):
                    self.state = 43
                    self.statement()
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 49
                self.match(qutesParser.BLOCK_STATEMENT_END)
                pass

            elif la_ == 6:
                localctx = qutesParser.AssignmentStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.variableName()
                self.state = 51
                self.match(qutesParser.ASSIGN)
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 52
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 53
                    self.paren_expr()
                    pass


                self.state = 56
                self.match(qutesParser.END_OF_STATEMENT)
                pass

            elif la_ == 7:
                localctx = qutesParser.ExpressionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.expr()
                self.state = 59
                self.match(qutesParser.END_OF_STATEMENT)
                pass

            elif la_ == 8:
                localctx = qutesParser.EmptyStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 61
                self.match(qutesParser.END_OF_STATEMENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paren_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(qutesParser.ExprContext,0)


        def getRuleIndex(self):
            return qutesParser.RULE_paren_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParen_expr" ):
                listener.enterParen_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParen_expr" ):
                listener.exitParen_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParen_expr" ):
                return visitor.visitParen_expr(self)
            else:
                return visitor.visitChildren(self)




    def paren_expr(self):

        localctx = qutesParser.Paren_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paren_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(qutesParser.T__0)
            self.state = 65
            self.expr()
            self.state = 66
            self.match(qutesParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(qutesParser.TermContext,0)


        def test(self):
            return self.getTypedRuleContext(qutesParser.TestContext,0)


        def paren_expr(self):
            return self.getTypedRuleContext(qutesParser.Paren_exprContext,0)


        def getRuleIndex(self):
            return qutesParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = qutesParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.term(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.test()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.paren_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qutesParser.TermContext)
            else:
                return self.getTypedRuleContext(qutesParser.TermContext,i)


        def GREATER(self):
            return self.getToken(qutesParser.GREATER, 0)

        def LOWER(self):
            return self.getToken(qutesParser.LOWER, 0)

        def EQUAL(self):
            return self.getToken(qutesParser.EQUAL, 0)

        def GREATEREQUAL(self):
            return self.getToken(qutesParser.GREATEREQUAL, 0)

        def LOWEREQUAL(self):
            return self.getToken(qutesParser.LOWEREQUAL, 0)

        def getRuleIndex(self):
            return qutesParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest" ):
                return visitor.visitTest(self)
            else:
                return visitor.visitChildren(self)




    def test(self):

        localctx = qutesParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_test)
        self._la = 0 # Token type
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.term(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.term(0)
                self.state = 75
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 992) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 76
                self.term(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def string(self):
            return self.getTypedRuleContext(qutesParser.StringContext,0)


        def integer(self):
            return self.getTypedRuleContext(qutesParser.IntegerContext,0)


        def variableName(self):
            return self.getTypedRuleContext(qutesParser.VariableNameContext,0)


        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qutesParser.TermContext)
            else:
                return self.getTypedRuleContext(qutesParser.TermContext,i)


        def ADD(self):
            return self.getToken(qutesParser.ADD, 0)

        def SUB(self):
            return self.getToken(qutesParser.SUB, 0)

        def getRuleIndex(self):
            return qutesParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = qutesParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_term, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.state = 81
                self.string()
                pass
            elif token in [20]:
                self.state = 82
                self.integer()
                pass
            elif token in [21]:
                self.state = 83
                self.variableName()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = qutesParser.TermContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 86
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 87
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==3 or _la==4):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 88
                    self.term(4) 
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VariableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(qutesParser.STRING, 0)

        def getRuleIndex(self):
            return qutesParser.RULE_variableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableName" ):
                listener.enterVariableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableName" ):
                listener.exitVariableName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableName" ):
                return visitor.visitVariableName(self)
            else:
                return visitor.visitChildren(self)




    def variableName(self):

        localctx = qutesParser.VariableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(qutesParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_ENCLOSURE(self, i:int=None):
            if i is None:
                return self.getTokens(qutesParser.STRING_ENCLOSURE)
            else:
                return self.getToken(qutesParser.STRING_ENCLOSURE, i)

        def STRING(self):
            return self.getToken(qutesParser.STRING, 0)

        def getRuleIndex(self):
            return qutesParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = qutesParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(qutesParser.STRING_ENCLOSURE)
            self.state = 97
            self.match(qutesParser.STRING)
            self.state = 98
            self.match(qutesParser.STRING_ENCLOSURE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(qutesParser.INT, 0)

        def getRuleIndex(self):
            return qutesParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = qutesParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_integer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(qutesParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.term_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def term_sempred(self, localctx:TermContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         




